# A

./: CMakeLists.txt  LICENSE  vcpkg.json
cmake/: ProjectAConfig.cmake.in
include/project_a/: matrix_ops.hpp  version.hpp.in
src/: matrix_ops.cpp
